--- a/src/components/Letter.module.css
+++ b/src/components/Letter.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   border: 8px solid var(--gray-900);
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 8px;
 
   display: flex;
@@ -9,7 +9,7 @@
   align-items: center;
   text-transform: uppercase;
   font-weight: bolder;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .wrapperEmpty:hover {
