--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -7,7 +7,7 @@
 }
 
 .wrapper span {
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
